// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Shared Components|UserList default (empty) 1`] = `
<div
  style={
    Object {
      "backgroundColor": "#000",
      "minHeight": "100vh",
    }
  }
>
  <div
    className="sc-cbkKFq eaVoWk"
  />
</div>
`;

exports[`Storyshots Shared Components|UserList with users 1`] = `
<div
  style={
    Object {
      "backgroundColor": "#000",
      "minHeight": "100vh",
    }
  }
>
  <div
    className="sc-cbkKFq eaVoWk"
  >
    <div
      className="sc-krvtoX bBiXMg"
      style={
        Object {
          "backgroundColor": "#1d1d20",
          "borderTop": "2px solid #FFF",
          "color": "#FFF",
          "display": "flex",
          "flexDirection": null,
          "fontFamily": "Inter, \\"Helvetica Neue\\", Helvetica, Arial, sans-serif",
          "padding": "12px 14px 14px",
        }
      }
    >
      <div
        className="sc-fOKMvo gdRyPW"
      >
        <a
          className="sc-dUjcNx hsSDAG"
          href="/user/1"
          onClick={[Function]}
        >
          Alan
           
          Watts
        </a>
        <span
          className="sc-gHboQg kRrBEr"
        />
      </div>
      <div
        className="sc-fYiAbW cNNgJZ"
      />
    </div>
    <div
      className="sc-krvtoX bBiXMg"
      style={
        Object {
          "backgroundColor": "#1d1d20",
          "borderTop": "2px solid #FFF",
          "color": "#FFF",
          "display": "flex",
          "flexDirection": null,
          "fontFamily": "Inter, \\"Helvetica Neue\\", Helvetica, Arial, sans-serif",
          "padding": "12px 14px 14px",
        }
      }
    >
      <div
        className="sc-fOKMvo gdRyPW"
      >
        <a
          className="sc-dUjcNx hsSDAG"
          href="/user/2"
          onClick={[Function]}
        >
          Dale
           
          Chihuly
        </a>
        <span
          className="sc-gHboQg kRrBEr"
        />
      </div>
      <div
        className="sc-fYiAbW cNNgJZ"
      />
    </div>
    <div
      className="sc-krvtoX bBiXMg"
      style={
        Object {
          "backgroundColor": "#1d1d20",
          "borderTop": "2px solid #FFF",
          "color": "#FFF",
          "display": "flex",
          "flexDirection": null,
          "fontFamily": "Inter, \\"Helvetica Neue\\", Helvetica, Arial, sans-serif",
          "padding": "12px 14px 14px",
        }
      }
    >
      <div
        className="sc-fOKMvo gdRyPW"
      >
        <a
          className="sc-dUjcNx hsSDAG"
          href="/user/3"
          onClick={[Function]}
        >
          Dave
           
          Bowie
        </a>
        <span
          className="sc-gHboQg kRrBEr"
        >
          loremipsumdolorsitametconsecteturadipiscinglitdonecobortis@nisitnullalobortisiaculis.com
        </span>
      </div>
      <div
        className="sc-fYiAbW cNNgJZ"
      />
    </div>
  </div>
</div>
`;

exports[`Storyshots Shared Components|UserList with users and actions 1`] = `
<div
  style={
    Object {
      "backgroundColor": "#000",
      "minHeight": "100vh",
    }
  }
>
  <div
    className="sc-cbkKFq eaVoWk"
  >
    <div
      className="sc-krvtoX bBiXMg"
      style={
        Object {
          "backgroundColor": "#1d1d20",
          "borderTop": "2px solid #FFF",
          "color": "#FFF",
          "display": "flex",
          "flexDirection": null,
          "fontFamily": "Inter, \\"Helvetica Neue\\", Helvetica, Arial, sans-serif",
          "padding": "12px 14px 14px",
        }
      }
    >
      <div
        className="sc-fOKMvo gdRyPW"
      >
        <a
          className="sc-dUjcNx hsSDAG"
          href="/user/1"
          onClick={[Function]}
        >
          Alan
           
          Watts
        </a>
        <span
          className="sc-gHboQg kRrBEr"
        />
      </div>
      <div
        className="sc-fYiAbW cNNgJZ"
      >
        <button
          disabled={false}
          style={
            Object {
              "backgroundColor": "#1d1d20",
              "border": "none",
              "borderRadius": "48px",
              "color": "#FFF",
              "cursor": "pointer",
              "display": "inline-block",
              "fill": "#FFF",
              "fontSize": "18px",
              "height": 40,
              "margin": "0",
              "marginTop": -5,
              "minHeight": 40,
              "outline": "none",
              "padding": "0",
              "width": 40,
            }
          }
        >
          <svg
            style={
              Object {
                "fill": "#FFF",
                "height": 40,
                "width": 40,
              }
            }
            viewBox="0 0 60 60"
          >
            <path
              d="M39.192 17.98l2.829 2.828L32.828 30l9.193 9.192-2.829 2.829L30 32.828l-9.192 9.193-2.829-2.829L27.172 30l-9.193-9.192 2.829-2.829L30 27.172l9.192-9.193z"
              fillRule="evenodd"
            />
          </svg>
        </button>
      </div>
    </div>
    <div
      className="sc-krvtoX bBiXMg"
      style={
        Object {
          "backgroundColor": "#1d1d20",
          "borderTop": "2px solid #FFF",
          "color": "#FFF",
          "display": "flex",
          "flexDirection": null,
          "fontFamily": "Inter, \\"Helvetica Neue\\", Helvetica, Arial, sans-serif",
          "padding": "12px 14px 14px",
        }
      }
    >
      <div
        className="sc-fOKMvo gdRyPW"
      >
        <a
          className="sc-dUjcNx hsSDAG"
          href="/user/2"
          onClick={[Function]}
        >
          Dale
           
          Chihuly
        </a>
        <span
          className="sc-gHboQg kRrBEr"
        />
      </div>
      <div
        className="sc-fYiAbW cNNgJZ"
      >
        <button
          disabled={false}
          style={
            Object {
              "backgroundColor": "#1d1d20",
              "border": "none",
              "borderRadius": "48px",
              "color": "#FFF",
              "cursor": "pointer",
              "display": "inline-block",
              "fill": "#FFF",
              "fontSize": "18px",
              "height": 40,
              "margin": "0",
              "marginTop": -5,
              "minHeight": 40,
              "outline": "none",
              "padding": "0",
              "width": 40,
            }
          }
        >
          <svg
            style={
              Object {
                "fill": "#FFF",
                "height": 40,
                "width": 40,
              }
            }
            viewBox="0 0 60 60"
          >
            <path
              d="M39.192 17.98l2.829 2.828L32.828 30l9.193 9.192-2.829 2.829L30 32.828l-9.192 9.193-2.829-2.829L27.172 30l-9.193-9.192 2.829-2.829L30 27.172l9.192-9.193z"
              fillRule="evenodd"
            />
          </svg>
        </button>
      </div>
    </div>
    <div
      className="sc-krvtoX bBiXMg"
      style={
        Object {
          "backgroundColor": "#1d1d20",
          "borderTop": "2px solid #FFF",
          "color": "#FFF",
          "display": "flex",
          "flexDirection": null,
          "fontFamily": "Inter, \\"Helvetica Neue\\", Helvetica, Arial, sans-serif",
          "padding": "12px 14px 14px",
        }
      }
    >
      <div
        className="sc-fOKMvo gdRyPW"
      >
        <a
          className="sc-dUjcNx hsSDAG"
          href="/user/3"
          onClick={[Function]}
        >
          Dave
           
          Bowie
        </a>
        <span
          className="sc-gHboQg kRrBEr"
        >
          loremipsumdolorsitametconsecteturadipiscinglitdonecobortis@nisitnullalobortisiaculis.com
        </span>
      </div>
      <div
        className="sc-fYiAbW cNNgJZ"
      >
        <button
          disabled={false}
          style={
            Object {
              "backgroundColor": "#1d1d20",
              "border": "none",
              "borderRadius": "48px",
              "color": "#FFF",
              "cursor": "pointer",
              "display": "inline-block",
              "fill": "#FFF",
              "fontSize": "18px",
              "height": 40,
              "margin": "0",
              "marginTop": -5,
              "minHeight": 40,
              "outline": "none",
              "padding": "0",
              "width": 40,
            }
          }
        >
          <svg
            style={
              Object {
                "fill": "#FFF",
                "height": 40,
                "width": 40,
              }
            }
            viewBox="0 0 60 60"
          >
            <path
              d="M39.192 17.98l2.829 2.828L32.828 30l9.193 9.192-2.829 2.829L30 32.828l-9.192 9.193-2.829-2.829L27.172 30l-9.193-9.192 2.829-2.829L30 27.172l9.192-9.193z"
              fillRule="evenodd"
            />
          </svg>
        </button>
      </div>
    </div>
  </div>
</div>
`;
